Re-enable Desktop integration tests in Debug (#5279)
* Re-enable integration tests in Debug

* Check metro bundler BEFORE running tests

* Skip ProcessThreadsPerResource

* Exclude Destkop int. tests in Debug again

* Add explaining comment

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -376,7 +376,7 @@ jobs:
     variables:
       #5059 - Disable failing or intermittent tests (IntegrationTestHarness,AsyncStorage).
       #5265 - WebSocketModuleIntegrationTest::WebSocketModule_Ping fails for Release
-      Desktop.IntegrationTests.Filter: '(FullyQualifiedName!~WebSocketJSExecutorIntegrationTest)&(FullyQualifiedName!=RNTesterIntegrationTests::IntegrationTestHarness)&(FullyQualifiedName!=RNTesterIntegrationTests::AsyncStorage)&(FullyQualifiedName!~WebSocketModule_)'
+      Desktop.IntegrationTests.Filter: '(FullyQualifiedName!~WebSocketJSExecutorIntegrationTest)&(FullyQualifiedName!=RNTesterIntegrationTests::IntegrationTestHarness)&(FullyQualifiedName!=RNTesterIntegrationTests::AsyncStorage)&(FullyQualifiedName!~WebSocketModule_)&(FullyQualifiedName!=WebSocketResourcePerformanceTest::ProcessThreadsPerResource)'
 
     steps:
       - checkout: self
@@ -427,6 +427,12 @@ jobs:
           filePath: $(Build.SourcesDirectory)\vnext\Scripts\Tfs\Start-TestServers.ps1
           arguments: -SourcesDirectory $(Build.SourcesDirectory)\vnext -Preload -SleepSeconds 120
 
+      - task: PowerShell@2
+        displayName: Check the metro bundle server
+        inputs:
+          targetType: 'inline'
+          script: Invoke-WebRequest -Uri "http://localhost:8081/IntegrationTests/IntegrationTestsApp.bundle?platform=windesktop&dev=true"
+
       - task: VSTest@2
         displayName: Run Desktop Integration Tests
         inputs:
@@ -441,14 +447,8 @@ jobs:
           collectDumpOn: onAbortOnly
           vsTestVersion: latest
           otherConsoleOptions: '/blame -- RunConfiguration.TestSessionTimeout=300000'
+        # Suspected debug assert in TestRunner hanging tests randomly. Run only on Release for now.
         condition: and(succeeded(), ne(variables['BuildConfiguration'], 'Debug'))
-
-      - task: PowerShell@2
-        displayName: Check the metro bundle server
-        inputs:
-          targetType: 'inline'
-          script: Invoke-WebRequest -Uri "http://localhost:8081/IntegrationTests/IntegrationTestsApp.bundle?platform=windesktop&dev=true"
-        condition: failed()
 
       - template: templates/stop-packagers.yml
 
