Squashed commit of the following:
commit a0ec98dbd6d0822cbcac1cd62996710be5093b3d
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jun 19 13:22:42 2020 -0700

    yarn format

commit e29ccbb9eac6d2ef740fde7c5f2be3f04fc2a81a
Merge: 137cce10c 0f8b773d8
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jun 19 13:03:16 2020 -0700

    Merge branch 'master' into abi-safety

commit 137cce10c38948ecd47761f49b8566ce16981412
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jun 19 12:58:43 2020 -0700

    update

commit 1fc35f187f6dad601e33e5c12bae18c5c65abd26
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 18:31:47 2020 -0700

    before ReloadInstanceWithOptions

commit 02878f8401907c08ff06308d34a41a2e4e240aa9
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 18:14:02 2020 -0700

    RedBox compiling

commit 63b75db1a122c2234726f255a3a458795776c722
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 17:25:14 2020 -0700

    before RedBox attempt

commit e05e3f692decc500fcdb06645148cda8f229013b
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 16:51:07 2020 -0700

    update

commit ca026a2eb29fa036ba247d3da49c645da7e3b192
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 16:06:44 2020 -0700

    compiling

commit 5ece757ce307fa4f2285b54dc1cec607126dcffe
Merge: 9880e74b8 15f915284
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 13:14:04 2020 -0700

    Merge branch 'master' into abi-safety

commit 9880e74b81286e3aace685bf740b8160e2089ef0
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 12:59:51 2020 -0700

    commit before merge

commit 1b59225cba1827f3ac49f944105715f57bc969a5
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 11:51:16 2020 -0700

    remove ViewManagerProvider dependencies

commit a2c9a79b45a040cbf5fa3112556fd7e4cb7408a4
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Mon Jun 15 18:39:52 2020 

--- a/vnext/Desktop/React.Windows.Desktop.vcxproj
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj
@@ -92,7 +92,7 @@
         JSI_EXPORT=;
         %(PreprocessorDefinitions)
       </PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);"$(ReactNativeWindowsDir)Microsoft.ReactNative";"$(ReactNativeWindowsDir)build\$(Platform)\$(Configuration)\Microsoft.ReactNative\Generated Files"</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);"$(ReactNativeWindowsDir)Microsoft.ReactNative"</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /Zc:strictStrings /bigobj</AdditionalOptions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -103,6 +103,7 @@
     </Link>
     <Midl>
       <AdditionalIncludeDirectories>$(ReactNativeWindowsDir)\Microsoft.ReactNative;$(ReactNativeWindowsDir)\Microsoft.ReactNative.Cxx;</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>CORE_ABI</PreprocessorDefinitions>
     </Midl>
   </ItemDefinitionGroup>
   <!-- TODO: Remove after https://github.com/microsoft/hermes-windows/issues/12 is fixed. -->
@@ -155,19 +156,30 @@
       <DependentUpon>ABI\NativeTracing.idl</DependentUpon>
       <ObjectFileName>$(IntDir)\ABI\</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="..\Microsoft.ReactNative\ReactNativeHost.cpp">
-      <DependentUpon>..\Microsoft.ReactNative\ReactNativeHost.idl</DependentUpon>
-    </ClCompile>
+    <ClCompile Include="..\Microsoft.ReactNative\ABICxxModule.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\DynamicReader.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\DynamicWriter.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\IReactContext.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\IReactModuleBuilder.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\IReactNotificationService.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\IReactPropertyBag.cpp">
       <DependentUpon>..\Microsoft.ReactNative\IReactPropertyBag.idl</DependentUpon>
       <ObjectFileName>$(IntDir)\ABI\</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="..\Microsoft.ReactNative\ReactHost\ReactHost.cpp" />
-    <ClCompile Include="..\Microsoft.ReactNative\ReactHost\MsoUtils.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\JsiReader.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\JsiWriter.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\NativeModulesProvider.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\ReactHost\AsyncActionQueue.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\ReactHost\JSBundle.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\ReactHost\JSBundle_Win32.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\ReactHost\MsoUtils.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\ReactHost\ReactHost.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\ReactNativeHost.cpp">
+      <DependentUpon>..\Microsoft.ReactNative\ReactNativeHost.idl</DependentUpon>
+    </ClCompile>
+    <ClCompile Include="..\Microsoft.ReactNative\ReactPackageBuilder.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\RedBox.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\TurboModulesProvider.cpp" />
     <ClCompile Include="CxxReactWin32\JSBigString.cpp" />
     <ClCompile Include="JSBigStringResourceDll.cpp" />
     <ClCompile Include="module.g.cpp" />
