--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -272,6 +272,7 @@
     <ClInclude Include="..\ReactUWP\Views\CheckboxViewManager.h" />
     <ClInclude Include="..\ReactUWP\Views\DatePickerViewManager.h" />
     <ClInclude Include="..\ReactUWP\Views\DynamicAutomationPeer.h" />
+    <ClInclude Include="..\ReactUWP\Views\DynamicValueProvider.h" />
     <ClInclude Include="..\ReactUWP\Views\DynamicAutomationProperties.h" />
     <ClInclude Include="..\ReactUWP\Views\ExpressionAnimationStore.h" />
     <ClInclude Include="..\ReactUWP\Views\FlyoutViewManager.h" />
@@ -453,6 +454,7 @@
     <ClCompile Include="..\ReactUWP\Views\ControlViewManager.cpp" />
     <ClCompile Include="..\ReactUWP\Views\DatePickerViewManager.cpp" />
     <ClCompile Include="..\ReactUWP\Views\DynamicAutomationPeer.cpp" />
+    <ClCompile Include="..\ReactUWP\Views\DynamicValueProvider.cpp" />
     <ClCompile Include="..\ReactUWP\Views\DynamicAutomationProperties.cpp" />
     <ClCompile Include="..\ReactUWP\Views\ExpressionAnimationStore.cpp" />
     <ClCompile Include="..\ReactUWP\Views\FlyoutViewManager.cpp" />
