--- a/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.Common.props
+++ b/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.Common.props
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
-  Copyright (c) Microsoft Corporation.
+  Copyright (c) Microsoft Corporation. All rights reserved.
   Licensed under the MIT License.
 
-  This file will be consumed by ALL UWP C++ app projects (both inside
+  This file will be consumed by ALL UWP app and module projects (both inside
   and outside of this repo) that build on top of Microsoft.ReactNative.
   Do not make any changes here unless it applies to ALL such projects.
 -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildThisFileDirectory)Microsoft.ReactNative.Uwp.Common.props" />
-  <Import Project="$(ReactNativeWindowsDir)\PropertySheets\Autolink.props" />
+  <Import Project="$(MSBuildThisFileDirectory)Microsoft.ReactNative.Common.props" />
 </Project>
