Promote 0.62 to latest

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -62,11 +62,11 @@
     "react-native": "^0.62.0-0"
   },
   "beachball": {
-    "defaultNpmTag": "preview",
+    "defaultNpmTag": "latest",
     "disallowedChangeTypes": [
       "major",
       "minor",
-      "patch"
+      "prerelease"
     ]
   }
 }
