Share ReactNativeHost::ReloadInstance impl between UWP and Win32 (#5288)
* Squashed commit of the following:

commit a0ec98dbd6d0822cbcac1cd62996710be5093b3d
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jun 19 13:22:42 2020 -0700

    yarn format

commit e29ccbb9eac6d2ef740fde7c5f2be3f04fc2a81a
Merge: 137cce10c 0f8b773d8
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jun 19 13:03:16 2020 -0700

    Merge branch 'master' into abi-safety

commit 137cce10c38948ecd47761f49b8566ce16981412
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jun 19 12:58:43 2020 -0700

    update

commit 1fc35f187f6dad601e33e5c12bae18c5c65abd26
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 18:31:47 2020 -0700

    before ReloadInstanceWithOptions

commit 02878f8401907c08ff06308d34a41a2e4e240aa9
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 18:14:02 2020 -0700

    RedBox compiling

commit 63b75db1a122c2234726f255a3a458795776c722
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 17:25:14 2020 -0700

    before RedBox attempt

commit e05e3f692decc500fcdb06645148cda8f229013b
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 16:51:07 2020 -0700

    update

commit ca026a2eb29fa036ba247d3da49c645da7e3b192
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 16:06:44 2020 -0700

    compiling

commit 5ece757ce307fa4f2285b54dc1cec607126dcffe
Merge: 9880e74b8 15f915284
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 13:14:04 2020 -0700

    Merge branch 'master' into abi-safety

commit 9880e74b81286e3aace685bf740b8160e2089ef0
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 12:59:51 2020 -0700

    commit before merge

commit 1b59225cba1827f3ac49f944105715f57bc969a5
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jun 18 11:51:16 2020 -0700

    remove ViewManagerProvide

--- a/vnext/Desktop.ABITests/React.Windows.Desktop.ABITests.vcxproj
+++ b/vnext/Desktop.ABITests/React.Windows.Desktop.ABITests.vcxproj
@@ -63,7 +63,14 @@
       <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(MSBuildThisFileDirectory);$(VCInstallDir)UnitTest\include;$(ReactNativeDir)\ReactCommon;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <!--
+        CORE_ABI - marks ABI elements that are shared between UWP and Win32 DLLs.
+      -->
+      <PreprocessorDefinitions>
+        _CONSOLE;
+        CORE_ABI;
+        %(PreprocessorDefinitions)
+      </PreprocessorDefinitions>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <UseFullPaths>true</UseFullPaths>
       <CallingConvention>Cdecl</CallingConvention>
@@ -129,22 +136,23 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PerfTests.cpp" />
-    <ClCompile Include="ReactNativeHostTests.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative.IntegrationTests\ReactPropertyBagTests.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative.IntegrationTests\ReactNativeHostTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SimpleMessageQueue.h" />
-    <ClInclude Include="MockReactPackageProvider.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="Application.manifest" />
     <None Include="packages.config" />
+    <JsBundleEntry Include="..\Microsoft.ReactNative.IntegrationTests\AddValues.js" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(SolutionDir)packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets" Condition="Exists('$(SolutionDir)packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.1.8.1\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-dyn.targets')" />
     <Import Project="$(SolutionDir)packages\Microsoft.Windows.CppWinRT.2.0.200615.7\build\native\Microsoft.Windows.CppWinRT.targets" Condition="Exists('$(SolutionDir)packages\Microsoft.Windows.CppWinRT.2.0.200615.7\build\native\Microsoft.Windows.CppWinRT.targets')" />
+    <Import Project="..\Microsoft.ReactNative.IntegrationTests\TestBundle.targets" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
