Promote 0.62 From Preview to Latest (#5294)
* Fix Fallout from #5234

Fixes #5285

* Create Scripts for the Release Process (#5229)

* Create Scripts for the Release Process

Fixes #4863

These are some quick and dirty scripts which update the various aspects of our repo to promote versions from canary to preview, preview to latest, and latest to legacy (old dist-tag). I've tested bits and pieces of this but still need to test it end-to-end.

As a note, this script has a lot of dependencies. The ones chosesn are meant to match dev dependencies already in the monorepo to not bloat things to much.

* CI Fixes

* Fixes

* Fixes

* Change the name of the wiki page

* Promote 0.62 to latest

* Change files

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -13,7 +13,6 @@
   "scripts": {
     "api": "just-scripts api",
     "build": "just-scripts build",
-    "change": "beachball change -b 0.62-stable",
     "clean": "just-scripts clean",
     "flow-check": "flow check",
     "lint:fix": "just-scripts lint:fix",
@@ -63,11 +62,11 @@
     "react-native": "^0.62.0-0"
   },
   "beachball": {
-    "defaultNpmTag": "preview",
+    "defaultNpmTag": "latest",
     "disallowedChangeTypes": [
       "major",
       "minor",
-      "patch"
+      "prerelease"
     ]
   }
 }
