--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -45,7 +45,7 @@ jobs:
       - task: CmdLine@2
         displayName: Beachball Publish
         inputs:
-          script: npx --no-install beachball publish --branch origin/$(Build.SourceBranchName) -n $(npmAuthToken) -yes -m "applying package updates ***NO_CI***" --bump-deps  --access public
+          script: npx --no-install beachball publish --branch origin/$(Build.SourceBranchName) -n $(npmAuthToken) -yes -m "applying package updates ***NO_CI***" --bump-deps  --access public --git-tags $(createGitTagForRelease)
 
       - task: CmdLine@2
         displayName: Set Version Env Vars
