--- a/vnext/package.json
+++ b/vnext/package.json
@@ -66,6 +66,7 @@
   },
   "beachball": {
     "defaultNpmTag": "canary",
+    "gitTags": true,
     "disallowedChangeTypes": [
       "major",
       "minor",
