Only Create Github Releases for Preview/Latest Releases of the "react-native-windows" Package (#5307)
* Avoid Creating Git Tags for Master Branch Releases

https://github.com/microsoft/beachball/pull/346 added Beachball support for not git tagging releases. We can use this to avoid the version spam we've had in our release view.

* Do it the way yargs-parser expects for boolean flags

* Don't blanket enable tagging for stable branches

* Only create tags for react-native-windows

* Change files

* Use New Beachball

* Change type none

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "devDependencies": {
-    "beachball": "^1.13.4",
+    "beachball": "^1.32.0",
     "husky": "^4.2.5",
     "lerna": "^3.16.1"
   },
@@ -47,5 +47,8 @@
     "**/@wdio/utils": "5.12.1",
     "**/webdriver": "git+https://github.com/react-native-windows/webdriver.git",
     "**/webdriverio": "5.12.1"
+  },
+  "beachball": {
+    "gitTags": false
   }
 }
