Convert Repo Scripts To Published TypeScript Packages
This change was motivated by a desire to update release note generation formatting and logic without the need to backport scripts through different versions of RNW. Instead of backporting, we can have the publish pipeline for stable btanches pull the latest published script.

These scripts have become essential enough where the move to Typescript makes sense, and having a single package sharing dependencies between them ends up muddling the waters. Scripts are not always self-isolated, like the shared find-repo-root script. Because public scripts may have dependencies, I marked all scripts scoped to "@rnw-scripts" to be published to avoid scenarios of accidentally introducing missing dependencies.

Some of this adds overhead/boilerplate for simple one-off scripts, but overall sets a more maintainable pattern going forward.

For servicing release note generation changes, we use the release promotion script to use the local release of create-github-releases in the master branch and switch to the latest published version in stable branches.

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -50,7 +50,7 @@ jobs:
       - task: CmdLine@2
         displayName: Create GitHub Release
         inputs:
-          script: node ./packages/scripts/createGithubReleases.js --authToken $(GITHUB_API)
+          script: npx $(githubReleaseNpxArgs) @rnw-scripts/create-github-releases --authToken $(GITHUB_API)
 
       - task: CmdLine@2
         displayName: Set Version Env Vars
