--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*", "vnext"],
+  "packages": ["packages/**", "vnext"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "0.0.0"
