--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "buildci": "lerna run build --stream -- --ci",
     "change": "beachball change",
     "clean": "lerna run clean --stream -- --color",
-    "format": "node packages/scripts/formatFiles.js -i -style=file -assume-filename=../.clang-format",
-    "format:verify": "node packages/scripts/formatFiles.js -i -style=file -assume-filename=../.clang-format -verify",
+    "format": "format-files -i -style=file -assume-filename=../.clang-format",
+    "format:verify": "format-files -i -style=file -assume-filename=../.clang-format -verify",
     "test": "lerna run test --stream -- --color",
     "validate-overrides": "lerna run validate-overrides --stream -- --color"
   },
@@ -22,7 +22,7 @@
   "license": "MIT",
   "workspaces": {
     "packages": [
-      "packages/*",
+      "packages/**",
       "vnext"
     ]
   },
